--- a/src/blocks/features/styles/style.scss
+++ b/src/blocks/features/styles/style.scss
@@ -20,7 +20,7 @@
 		position: relative;
 		width: 100%;
 		word-break: break-word;
-		margin-bottom: 30px;
+		// margin-bottom: 30px;
 
 		// @media (min-width: 600px) {
 		// 	margin-left: 15px;
